--- a/football-prediction/.gitignore
+++ b/football-prediction/.gitignore
@@ -18,10 +18,15 @@
 .env.development.local
 .env.test.local
 .env.production.local
-*.csv
-*.xls
-*.json
-
+games.csv
+games.xls
+games_updated.csv
+package-lock.json
+package.json
+.flaskenv
+chromedriver
+__pycache__/
+src/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
